# Vulkitten

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  GOAL.md  QUESTIONS.md  README.md  RHI_Design.md  RHI_Design_v1.1.md  RHI_Design_v1.2.md  TASK.md  TASK_LOG.md  VulkittenEditorSrc.md  VulkittenSrc.md  build.bat  compile_shader.bat  compile_shader.py  scene.yaml  test_output_DrawIndirect.ppm
Sandbox/: CMakeLists.txt
Sandbox/assets/computeshaders/: ParticleEmit.comp  ParticleRenderArg.comp  ParticleSim.comp  ParticleSimArg.comp
Sandbox/assets/computeshaders/common/: math_hash.h
Sandbox/assets/shaders/: FlatColor.frag  FlatColor.frag.spv  FlatColor.vert  FlatColor.vert.spv  Particle.shader  Particle.vert  SolidColor.frag.spv  SolidColor.vert  SolidColor.vert.spv  Texture.frag  Texture.frag.spv  Texture.shader  Texture.vert  Texture.vert.spv  TextureEntity.frag  TextureEntity.frag.spv  TextureEntity.shader  TextureEntity.vert  TextureEntity.vert.spv
Sandbox/src/: EmptyLayer.h  ExampleLayer.h  ExampleLayer2.h  ExampleLayer3D.cpp  ExampleLayer3D.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  main.cpp
Vulkitten/: ARCHITECTURE.md  CMakeLists.txt
Vulkitten/assets/computeshaders/: ParticleEmit.comp  ParticleRenderArg.comp
Vulkitten/assets/shaders/: FlatColor.frag  FlatColor.shader  Particle.frag  Particle.shader  Simple3D.frag  Simple3D.shader  Simple3D.vert  SolidColor.frag  SolidColor.shader  Texture.frag  Texture.shader  TextureEntity.frag  TextureEntity.shader
Vulkitten/src/: Test.cpp  Test.h  Vulkitten.h  VulkittenEntry.h  vktpch.cpp  vktpch.h
Vulkitten/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLDevice.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUtil.cpp  OpenGLUtil.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Vulkitten/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsSurface.cpp  WindowsSurface.h  WindowsWindow.cpp  WindowsWindow.h
Vulkitten/src/Vulkittem/: Application.cpp  Application.h  Core.h  EntryPoint.h
Vulkitten/src/Vulkitten/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCode.h  Window.h
Vulkitten/src/Vulkitten/Core/: Application.cpp  Application.h  Assert.h  ClassFactory.cpp  ClassFactory.h  Core.h  Engine.cpp  Engine.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  GraphicContext.cpp  GraphicContext.h  ISurface.h  IWindow.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Vulkitten/src/Vulkitten/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Vulkitten/src/Vulkitten/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Vulkitten/src/Vulkitten/Perf/: Instrumentor.cpp  Instrumentor.h  Timer.cpp  Timer.h
Vulkitten/src/Vulkitten/RHI/: Handle.hpp  IBuffer.hpp  ICommandBuffer.hpp  IGeometry.hpp  IPipeline.hpp  ISampler.hpp  IShader.hpp  ITexture.hpp  RHIPipelineDesc.hpp  RHIResourceDescs.hpp
Vulkitten/src/Vulkitten/Renderer/: Buffer.cpp  Buffer.h  Camera.h  CameraController.cpp  CameraController.h  Device.cpp  Device.h  EditorCamera.cpp  EditorCamera.h  FrameContext.h  Framebuffer.cpp  Framebuffer.h  GpuResourceManager.cpp  GpuResourceManager.h  GraphicsContext.h  IGpuResourceManager.h  IRenderer.cpp  IRenderer.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderComand.cpp  RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  RenderUtils.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererFactory.cpp  RendererFactory.h  RendererSubsystem.cpp  RendererSubsystem.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  (+4 more)
Vulkitten/src/Vulkitten/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneContext.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Vulkitten/src/Vulkitten/Utils/: FileDialogs.h  GraphicUtil.h  SceneUtil.h  YAMLConversions.h
VulkittenEditor/: CMakeLists.txt
VulkittenEditor/src/: DefaultLayer.cpp  DefaultLayer.h  EditorApp.cpp  EditorCommand.cpp  EditorCommand.h  EditorContext.h  EditorLayer.cpp  EditorLayer.h  IPanel.h
VulkittenEditor/src - Copy/: DefaultLayer.cpp  DefaultLayer.h
VulkittenEditor/src - Copy/Panel/: ResourcePanel.cpp  ResourcePanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
VulkittenEditor/src/Panel/: PerformancePanel.cpp  PerformancePanel.h  PropertyPanel.cpp  PropertyPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
VulkittenRHI/: CMakeLists.txt  DESIGN.md  README.md
VulkittenRHI/include/rhi/: FrameContext.hpp  IBuffer.hpp  ICommandBuffer.hpp  IGeometry.hpp  IPipeline.hpp  IRenderDevice.hpp  ISampler.hpp  IShader.hpp  ISurface.hpp  ITexture.hpp  RenderCommandList.hpp  Renderer.hpp  ResourceDescs.hpp  ResourceManager.hpp
VulkittenRHI/samples/: CMakeLists.txt  main.cpp
VulkittenRHI/src/: RenderCommandList.cpp  Renderer.cpp  ResourceManager.cpp
VulkittenRHI/src/gl/: GLCommandBuffer.cpp  GLCommandBuffer.hpp  GLDevice.cpp  GLDevice.hpp  GLResources.cpp  GLResources.hpp
VulkittenRHI/src/vk/: VKCommandBuffer.cpp  VKCommandBuffer.hpp  VKDevice.cpp  VKDevice.hpp  VKResources.cpp  VKResources.hpp  VKSwapchain.cpp  VKSwapchain.hpp
VulkittenRHI/tests/: CMakeLists.txt  compile_shaders.bat  main.cpp
VulkittenRHI/tests/gl/: GLDebugLabelTest.cpp  GLDispatchTest.cpp  GLDrawTest.cpp  GLTestFixture.cpp  GLTestFixture.hpp  test_minimal.cpp
VulkittenRHI/tests/mocks/: MockCommandBuffer.hpp
VulkittenRHI/tests/unit/: FormatTest.cpp  HandleTest.cpp  RenderCommandListTest.cpp  TypesTest.cpp
VulkittenRHI/tests/vk/: VKDebugLabelTest.cpp  VKDispatchTest.cpp  VKDrawTest.cpp  VKTestFixture.cpp  VKTestFixture.hpp  compile_shaders.bat
(+91 files in other folders)
