cmake_minimum_required(VERSION 3.16)
project(VulkittenEngine VERSION 1.0.0 LANGUAGES CXX C)

# 设置C++标准
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 获取生成器平台 (Win32/x64)
if(CMAKE_GENERATOR_PLATFORM)
    set(PLATFORM_NAME ${CMAKE_GENERATOR_PLATFORM})
elseif(CMAKE_VS_PLATFORM_NAME)
    set(PLATFORM_NAME ${CMAKE_VS_PLATFORM_NAME})
else()
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(PLATFORM_NAME "x64")
    else()
        set(PLATFORM_NAME "Win32")
    endif()
endif()

# 规范化平台名称
if(PLATFORM_NAME STREQUAL "Win32" OR PLATFORM_NAME STREQUAL "x86")
    set(PLATFORM_NAME "x86")
elseif(PLATFORM_NAME STREQUAL "x64" OR PLATFORM_NAME STREQUAL "AMD64")
    set(PLATFORM_NAME "x64")
    add_definitions(-DVULKITTEN_PLATFORM_WINDOWS)
endif()

# 规范化配置名称 (Debug/Release/RelWithDebInfo/MinSizeRel)
string(TOUPPER "${CMAKE_BUILD_TYPE}" BUILD_TYPE_UPPER)
if(CMAKE_BUILD_TYPE)
    set(CONFIG_NAME ${CMAKE_BUILD_TYPE})
else()
    set(CONFIG_NAME "Debug")
endif()

# 设置输出目录
# 二进制输出: $(SolutionDir)\bin\$(Configuration)-$(Platform)\$(ProjectName)\
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CONFIG_NAME}-${PLATFORM_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CONFIG_NAME}-${PLATFORM_NAME})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CONFIG_NAME}-${PLATFORM_NAME})

# 中间产物输出: $(SolutionDir)\bin-int\$(Configuration)-$(Platform)\$(ProjectName)\
set(CMAKE_INTERMEDIATE_DIRECTORY ${CMAKE_SOURCE_DIR}/bin-int/${CONFIG_NAME}-${PLATFORM_NAME})

# 为每种配置单独设置 (支持多配置生成器如VS)
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER)
    string(TOLOWER ${OUTPUTCONFIG} OUTPUTCONFIG_LOWER)

    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_SOURCE_DIR}/bin/${OUTPUTCONFIG}-${PLATFORM_NAME})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_SOURCE_DIR}/bin/${OUTPUTCONFIG}-${PLATFORM_NAME})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_SOURCE_DIR}/bin/${OUTPUTCONFIG}-${PLATFORM_NAME})
endforeach()

# 设置中间文件目录
set(CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_INTERMEDIATE_DIRECTORY})
set(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_INTERMEDIATE_DIRECTORY})

# Windows平台特定设置
if(WIN32)
    add_definitions(-DNOMINMAX -DWIN32_LEAN_AND_MEAN)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()

# 添加子工程
add_subdirectory(Vulkitten)
add_subdirectory(SandBox)